Changed name stuff

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       </style>
         <head>
                 <div id="header1">
-                          <h1>TESTING</h1>
+                          <h1>Tachycardia</h1>
                               </div>
                                 </head>
                                   <body>
