--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <title>Testing HTML</title>
         <style>
-        #header1 {color: green}
+        #header1 {color: red}
         </style>
         <head>
             <div id="header1">
@@ -18,7 +18,7 @@
             <script>
                   
                 function changeText() {
-                    document.getElementById("text1").innerHTML = "<h1>Text</h1>";
+                    document.getElementById("text1").innerHTML = "<h1>Fight the Power!</h1>";
                 }
 
                 function printWindow() {
