Function change marks

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <title>Testing HTML</title>
+    <title>Tachycardia</title>
         <style>
         #header1 {color: red}
         </style>
         <head>
             <div id="header1">
-                <h1>Tachycardia</h1>
+                <h1>Welcome!</h1>
             </div>
         </head>
         <body>
