--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <script>
                   
                 function changeText() {
-                    if (document.getElementById("text1").value == null) {
+                    if (!document.getElementById("text1").value) {
                         document.getElementById("text1").innerHTML = "<h1>Fight the Power!</h1>";
                     }
                     else {
