more debugging changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     var textVar = document.getElementById("text1");
                     if (!(textVar.value && textVar)) {
                         textVar.innerHTML = "<h1>Fight the Power!</h1>";
-                        alert("Changed");
+                        alert(textVar.value);
                     }
                     else {
                         textVar.innerHTML = "<h1></h1>";
