--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/basic-bg.jpg')">
-    <!--<div class="overlay"></div>-->
+  <header class="masthead" style="background-image: url('img/mint1.jpg')">
+    <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>CTF Write Ups</h1>
-            <span class="subheading">o7</span>
+            <span class="subheading"></span>
           </div>
         </div>
       </div>
