--- a/writeup1.html
+++ b/writeup1.html
@@ -47,8 +47,8 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/basic-bg.jpg')">
-    <!--<div class="overlay"></div>-->
+  <header class="masthead" style="background-image: url('img/cli1.png')">
+    <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
