Minor edit CVE SteelMountain

--- a/writeup3.html
+++ b/writeup3.html
@@ -106,7 +106,7 @@
             <div class="fill-screen">
                 <img class="img-fit" src="img/SteelMountainScreenshots/cveExploitEx.png">
             </div>
-            <p>https://tryhackme.com/room/steelmountain</p>
+            <p>Giving us the CVE number: <code>2014-6287</code></p>
 
             <!-- Foothold -->
             <hr><h2 id="foothold">Foothold</h2>
