--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Hello! My name is Darren. I am a UCSD alumni with a background in physics and computer science. However, I'm particularly interested in Information Security. Here, you can find my write ups for CTFs as I upskill and make my way through the world.</p>
+        <p>Hello! My name is Darren. I am a UCSD alum with a background in physics and computer science. However, I'm particularly interested in Information Security. Here, you can find my write ups for CTFs as I upskill and make my way through the world.</p>
       </div>
     </div>
   </div>
