--- a/writeup1.html
+++ b/writeup1.html
@@ -361,7 +361,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Tachycardia 2021</p>
+          <p class="copyright text-muted">Copyright &copy; Darren Trieu Nguyen 2021</p>
         </div>
       </div>
     </div>
