--- a/writeup2.html
+++ b/writeup2.html
@@ -170,7 +170,7 @@ this is how mistakes happen. (This means you too, Jan!)
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Tachycardia 2021</p>
+          <p class="copyright text-muted">Copyright &copy; Darren Trieu Nguyen 2021</p>
         </div>
       </div>
     </div>
