--- a/writeup4.html
+++ b/writeup4.html
@@ -218,7 +218,7 @@ by user <code>Maya</code>.</p>
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Tachycardia 2021</p>
+          <p class="copyright text-muted">Copyright &copy; Darren Trieu Nguyen 2021</p>
         </div>
       </div>
     </div>
