--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Darren Nguyen</a>
+      <a class="navbar-brand" href="about.html">Darren Nguyen</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -39,7 +39,7 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Man Page</a>
+            <a class="nav-link" href="about.html">About Me</a>
           </li>
         </ul>
       </div>
@@ -53,7 +53,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>CTF Write Ups</h1>
+            <h1>Write Ups</h1>
             <span class="subheading"></span>
           </div>
         </div>
