--- a/writeup4.html
+++ b/writeup4.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Man Page</a>
+            <a class="nav-link" href="about.html">About Me</a>
           </li>
         </ul>
       </div>
