--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
       <div class="col-lg-8 col-md-10 mx-auto">
         <p>Hello! My name is Darren. I am a UCSD alum with a background in physics and computer science. I'm currently looking to transition into Information Security. On this website, you can find my writeups for Walkthroughs and CTFs from TryHackMe that I will do from time to time.</p>
         <h5>CryoEM Web App</h5>
-        <p>I've most recently been involved with Cryogenic Electron Microscopy research with Andres Leschziner in his <a href="https://andres-leschziner.squarespace.com/">lab</a>. I collaborated with Dr. Leschziner to create and outline a multi-process workflow that involved computing large distance and covariance protein matrices and then displaying the results on an rudimentary web application. The project is open source and can be found <a href="https://github.com/Tachycardia/CryoEMCovariance">here</a>.</p>
+        <p>I've most recently been involved with Cryogenic Electron Microscopy research with Andres Leschziner in his <a href="https://andres-leschziner.squarespace.com/">lab</a>. I collaborated with Dr. Leschziner to create and outline a multi-step workflow that involved computing large distance and covariance protein matrices and then displaying the results on an rudimentary web application. The project is open source and can be found <a href="https://github.com/Tachycardia/CryoEMCovariance">here</a>.</p>
         <h5>Simulations</h5>
         <p>During my undergraduate studies, I coded CUDA N-Body simulations that modeled events such as Cartwheel galaxy collisions.</p>
         <div class="fill-screen">
