--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/Tachycardia/">
+              <a href="https://github.com/RenTrieu/">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i>
