--- a/writeup2.html
+++ b/writeup2.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Tachycardia</title>
+  <title>Ren Trieu</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -162,7 +162,7 @@ this is how mistakes happen. (This means you too, Jan!)
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/Tachycardia/">
+              <a href="https://github.com/RenTrieu/">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i>
