Small update ig

--- a/about.html
+++ b/about.html
@@ -13,10 +13,10 @@
     <a href="index.html">home</a>
     <a href="about.html">about</a>
   </center>
-  <center>
-    <h1>Welcome to Ren Trieu's homepage.</h1>
-  </center>
   <div>
-    Currently under construction while I figure out what I want to put here!
+    <p>
+      My name is Ren Trieu. I'm a systems engineer with a background in physics
+      and computer science. I like Linux a lot.
+    </p>
   </div>
 </body>
